add UI features

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -58,128 +58,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!--/.navbar-header-->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
-                    <ul class="dropdown-menu multi-column columns-3">
-                      <div class="row">
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/men">Accessories</a></li>
-                            <li><a href="/men">Bags</a></li>
-                            <li><a href="/men">Cap &amp; Hats</a></li>
-                            <li><a href="/men">Tops</a></li>
-                            <li><a href="/men">Jackets &amp; Coats</a></li>
-                            <li><a href="/men">wallets</a></li>
-                            <li><a href="/men">Jeans</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/men">Shirts</a></li>
-                            <li><a href="/men">Shoes,Boots</a></li>
-                            <li><a href="/men">Shorts</a></li>
-                            <li><a href="/men">Watches</a></li>
-                            <li><a href="/men">Sunglasses</a></li>
-                            <li><a href="/men">Bands</a></li>
-                            <li><a href="/men">Swimwear</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/men">Jewellery</a></li>
-                            <li><a href="/men">Jack &amp; Jones</a></li>
-                            <li><a href="/men">Ray-Ban</a></li>
-                            <li><a href="/men">Lipsticks</a></li>
-                            <li><a href="/men">Longer wear</a></li>
-                            <li><a href="/men">sarees</a></li>
-                            <li><a href="/men">Nike</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </ul>
-                  </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Women <b class="caret"></b></a>
-                    <ul class="dropdown-menu multi-column columns-3">
-                      <div class="row">
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/women">Accessories</a></li>
-                            <li><a href="/women">Bags</a></li>
-                            <li><a href="/women">Cap &amp; Hats</a></li>
-                            <li><a href="/women">Tops</a></li>
-                            <li><a href="/women">Jackets &amp; Coats</a></li>
-                            <li><a href="/women">wallets</a></li>
-                            <li><a href="/women">Jeans</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/women">Shirts</a></li>
-                            <li><a href="/women">Shoes,Boots</a></li>
-                            <li><a href="/women">Shorts</a></li>
-                            <li><a href="/women">Watches</a></li>
-                            <li><a href="/women">Sunglasses</a></li>
-                            <li><a href="/women">Bands</a></li>
-                            <li><a href="/women">Swimwear</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/women">Jewellery</a></li>
-                            <li><a href="/women">Jack &amp; Jones</a></li>
-                            <li><a href="/women">Ray-Ban</a></li>
-                            <li><a href="/women">Lipsticks</a></li>
-                            <li><a href="/women">Longer wear</a></li>
-                            <li><a href="/women">sarees</a></li>
-                            <li><a href="/women">Nike</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </ul>
-                  </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kids<b class="caret"></b></a>
-                    <ul class="dropdown-menu multi-column columns-3">
-                      <div class="row">
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/kid">Accessories</a></li>
-                            <li><a href="/kid">Bags</a></li>
-                            <li><a href="/kid">Cap &amp; Hats</a></li>
-                            <li><a href="/kid">Tops</a></li>
-                            <li><a href="/kid">Jackets &amp; Coats</a></li>
-                            <li><a href="/kid">wallets</a></li>
-                            <li><a href="/kid">Jeans</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/kid">Shirts</a></li>
-                            <li><a href="/kid">Shoes,Boots</a></li>
-                            <li><a href="/kid">Shorts</a></li>
-                            <li><a href="/kid">Watches</a></li>
-                            <li><a href="/kid">Sunglasses</a></li>
-                            <li><a href="/kid">Bands</a></li>
-                            <li><a href="/kid">Swimwear</a></li>
-                          </ul>
-                        </div>
-                        <div class="col-sm-4">
-                          <ul class="multi-column-dropdown">
-                            <li><a href="/kid">Jewellery</a></li>
-                            <li><a href="/kid">Jack &amp; Jones</a></li>
-                            <li><a href="/kid">Ray-Ban</a></li>
-                            <li><a href="/kid">Lipsticks</a></li>
-                            <li><a href="/kid">Longer wear</a></li>
-                            <li><a href="/kid">sarees</a></li>
-                            <li><a href="/kid">Nike</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </ul>
-                  </li>
+                  <li><a href="/product/men">Men</a></li>
+                  <li><a href="/product/women">Women</a></li>
+                  <li><a href="/product/kid">Kid</a></li>
                   <li><a href="/contact">Contact</a></li>
                   <li><a href="/customer" class="customer-for-admin">Customer</a></li>
+                  <li><a href="/customer/order" class="order-for-admin">Order</a></li>
                 </ul>
               </div>
               <!--/.navbar-collapse-->
@@ -193,19 +77,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <input class="serch" type="text" placeholder="Search" onfocus="this.value = '';"
                 onblur="if (this.value == '') {this.value = 'Search';}" />
             </div>
-            <div class="cart box_1">
-              <a href="/checkout">
+            <div class="cart box_1" style="margin-top: 15px;">
+              <a href="/user/checkout">
                 <h3>
                   <img src="/images/cart.png" alt="" />
                   <div class="total">
-                    <span class="simpleCart_total"></span>
+                    <span style="margin-left: 0.5em">(0)</span>
                   </div>
                 </h3>
               </a>
-              <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
+              {{!-- <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p> --}}
             </div>
-            <div class="head-signin">
-              <h5><a href="/login"><i class="hd-dign"></i>Sign in</a></h5>
+            <div class="head-signin dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                style="font-family: 'Oswald', sans-serif; text-decoration: none; color:black; font-size: 0.8em"><i
+                  class="hd-dign"></i>Sign in</a>
+              <ul class="dropdown-menu user-dropdown" style="min-width: 160px;">
+                <div class="row">
+                  <div class="row-sm-3">
+                    <ul class="multi-column-dropdown">
+                      <li><a href="/user">My information</a></li>
+                      <li><a href="/user/password">Change password</a></li>
+                      <li><a href="/user/arriving">Arriving (3)</a></li>
+                      <li><a href="/user/history">History</a></li>
+                      <li><a href="#">Log out <span class="glyphicon glyphicon-log-in" aria-hidden="true"
+                            style="padding-left: 8px"></span></a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </ul>
             </div>
             <div class="clearfix"> </div>
           </div>
