--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,16 +6,15 @@
             <div class="col-md-6 login-left">
                 <h2>Existing User</h2>
                 <form>
-                    <input type="text" placeholder="Username" required="">
+                    <input type="email" placeholder="Email" required="">
                     <input type="password" placeholder="Password" required="">
                     <input type="submit" value="Login">
                 </form>
             </div>
             <div class="col-md-6 login-right">
-                <h3>New User? Create an Account</h3>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
-                    born and I will give you a complete account of the system. and expound the actual teachings of the
-                    great.</p>
+                <h3>New User?</h3>
+                <p>If this is your first time buying in this website. Please register an account to receive our customer
+                    policy</p>
                 <a href="/signup" class="login-btn">Create an Account </a>
             </div>
             <div class="clearfix"> </div>
