--- a/views/user/checkout.hbs
+++ b/views/user/checkout.hbs
@@ -34,41 +34,38 @@
                         <li><span>Item</span></li>
                         <li><span>Product Name</span></li>
                         <li><span>Unit Price</span></li>
-                        <li><span>Delivery Details</span></li>
-                        <li> </li>
                         <div class="clearfix"> </div>
                     </ul>
                     <ul class="cart-header simpleCart_shelfItem">
                         <div class="close1"> </div>
-                        <li class="ring-in"><a href="/single"><img src="/images/c.jpg" class="img-responsive"
+                        <li class="ring-in"><a href="/product"><img src="/images/c.jpg" class="img-responsive"
                                     alt=""></a>
                         </li>
-                        <li><span>Bracelets</span>
-                        </li>
+                        <li><span>Bracelets</span></li>
                         <li><span class="item_price">$ 290.00</span></li>
-                        <li> <a href="#" class="add-cart cart-check item_add">Add to cart</a></li>
+
                         <div class="clearfix"> </div>
                     </ul>
                     <ul class=" cart-header1 simpleCart_shelfItem">
                         <div class="close2"> </div>
-                        <li class="ring-in"><a href="/single"><img src="/images/c2.jpg" class="img-responsive"
+                        <li class="ring-in"><a href="/product"><img src="/images/c2.jpg" class="img-responsive"
                                     alt=""></a>
                         </li>
                         <li><span>Watches</span></li>
                         <li><span class="item_price">$ 300.00</span></li>
-                        <li> <a href="#" class="add-cart cart-check item_add">Add to cart</a></li>
                         <div class="clearfix"> </div>
                     </ul>
                     <ul class="cart-header2 simpleCart_shelfItem">
                         <div class="close3"> </div>
-                        <li class="ring-in"><a href="/single"><img src="/images/c3.jpg" class="img-responsive"
+                        <li class="ring-in"><a href="/product"><img src="/images/c3.jpg" class="img-responsive"
                                     alt=""></a>
                         </li>
                         <li><span>Handbag</span></li>
                         <li><span class="item_price">$ 360.00</span></li>
-                        <li> <a href="#" class="add-cart cart-check item_add">Add to cart</a></li>
                         <div class="clearfix"> </div>
                     </ul>
+
+                    <button class="checkout-submit">Buy</button>
                 </div>
             </div>
         </div>
