--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1392,8 +1392,8 @@ ul.unit{
 }
 ul.unit li {
 	display:inline-block;
-	width:20%;
-	float:left;
+	width: 30%;
+    float: left;
 }
  ul.unit li span{
 	display:inline-block;
@@ -1404,17 +1404,17 @@ ul.unit li {
 ul.cart-header,ul.cart-header1{
 	padding:1em;
 	background:#FFFFFF;
-	  margin: 0em 0em 1.5em 0em;
-	  box-shadow:0px 0px 4px #D2D1D1;
+	margin: 0em 0em 1.5em 0em;
+	box-shadow:0px 0px 4px #D2D1D1;
 }
 ul.cart-header2{
 	padding:1em;
 	background:#fff;
-	  box-shadow: 0px 0px 4px #C2C2C2;
+	box-shadow: 0px 0px 4px #C2C2C2;
 }
  ul.cart-header li, ul.cart-header1 li,ul.cart-header2 li{
 	display:inline-block;
-	width:20%;
+	width: 30%;
 	float:left;
 }
 ul.cart-header li span,ul.cart-header1 li span,ul.cart-header2 li span{
@@ -1445,24 +1445,46 @@ ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
     font-size: 0.7em;
     color: #969393;
 }
+
+.in-check .checkout-submit {
+    float: right;
+    margin-top: 53px;
+    outline: none;
+    border: none;
+    background-color: #EA572D;
+    height: 3em;
+    width: 8em;
+    color: white;
+    font-size: 1.2em;
+}
+
+.in-check .checkout-submit:hover {
+    background:#847057;
+	transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -o-transition: 0.5s all;
+}
 /*--end-checkout--*/
-/*--signin start here--*/
-.signin {
+/*--signup start here--*/
+.signup {
     padding: 6em 0em;
 }
-.signin-main h1{
+.signup-main h1{
     font-size: 2em;
     color:#EA572D;
     font-family: 'Oswald', sans-serif;
-        text-align: center;
+    text-align: center;
+    margin-top: 2em;
 }
-.signin-main h2 {
+.signup-main h2 {
     font-size: 1.5em;
     color: #847057;
     margin: 1em 0em;
     font-family: 'Oswald', sans-serif;
 }
-.signin-main input[type="text"] {
+
+.signup-main .signup-two-row {
     font-size: 1em;
     color: #000;
     width: 48%;
@@ -1473,15 +1495,12 @@ ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
     border-left: none;
     border-right: none;
     outline: none;
-    margin: 0em 2.5em 1em 0em;
+    margin: 1em 2.5em 1em 0em;
 }
-.signin-main input.no-margin {
-    margin: 0px;
-}
-.signin-main input[type="password"] {
+.signup-main .signup-one-line {
     font-size: 1em;
     color: #000;
-    width: 48%;
+    width: 100%;
     padding: 0.4em 0.5em;
     display: inline-block;
     border-bottom: 1px solid #ccc;
@@ -1489,12 +1508,15 @@ ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
     border-left: none;
     border-right: none;
     outline: none;
-    margin: 1em 2.5em 2em 0em;
+    margin: 1em 2.5em 1em 0em;
 }
-.signin-main input.no-margin {
+.signup-main input.no-margin {
     margin: 0px;
 }
-.signin-main input[type="submit"] {
+.signup-main input.no-margin {
+    margin: 0px;
+}
+.signup-main input[type="submit"] {
     font-size: 1em;
     color: #fff;
     padding: 0.6em 1em;
@@ -1503,72 +1525,16 @@ ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
     outline: none;
         float: right;
     margin-top: 2em;
+    margin-bottom: 3em;
 }
-.signin-main input[type="submit"]:hover {
+.signup-main input[type="submit"]:hover {
 	background:#847057;
 	transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
   -o-transition: 0.5s all;
 }
-/*--cheek box--*/
-.remember-top{
- float:left;
-}
-span.checkbox1 {
-    margin-top: 2px;
-}
-.checkbox {
-	margin-bottom: 4px;
-	font-size: 1.2em;
-	line-height: 27px;
-	cursor: pointer;
-}
-.checkbox {
-  position: relative;
-  font-size: 0.9em;
-  font-weight: normal;
-  color: #000;
-  padding: 0em 0.5em 0em 1.6em;
-}
-.checkbox i {
-	position: absolute;
-	bottom: 5px;
-	left: 0;
-	display: block;
-	width:16px;
-	height:16px;
-	outline: none;
-	border: 1px solid #ccc;
-}
-.checkbox input + i:after {
-	content: '';
-	background: url("../images/tick.png") no-repeat 3px 4px;
-	top: -1px;
-	left: -1px;
-	width: 15px;
-	height: 15px;
-	font: normal 12px/16px FontAwesome;
-	text-align: center;
-}
-.checkbox input + i:after {
-	position: absolute;
-	opacity: 0;
-	transition: opacity 0.1s;
-	-o-transition: opacity 0.1s;
-	-ms-transition: opacity 0.1s;
-	-moz-transition: opacity 0.1s;
-	-webkit-transition: opacity 0.1s;
-}
-.checkbox input {
-	position: absolute;
-	left: -9999px;
-}
-.checkbox input:checked + i:after {
-	opacity: 1;
-}
-/*---*/
-/*--signin end here--*/
+/*--signup end here--*/
 /*--login strat here--*/
 .login {
     padding: 6em 0em;
@@ -1586,7 +1552,7 @@ span.checkbox1 {
     font-family: 'Oswald', sans-serif;
     margin-bottom: 1em;
 }
-.login-left input[type="text"] {
+.login-left input[type="email"] {
     font-size: 1em;
     color: #999;
     padding: 0.5em 1em;
@@ -1785,6 +1751,283 @@ span.glyphicon.glyphicon-envelope {
     min-height: 400px;
 }
 /* customer end here */
+
+/* update information start here*/
+.my-account {
+    padding: 6em 0em;
+}
+.myaccount-main h1{
+    font-size: 2em;
+    color:#EA572D;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    margin-top: 2em;
+}
+.myaccount-main h2 {
+    font-size: 1.5em;
+    color: #847057;
+    margin: 1em 0em;
+    font-family: 'Oswald', sans-serif;
+}
+
+.myaccount-main .myaccount-two-row {
+    font-size: 1em;
+    color: #000;
+    width: 48%;
+    padding: 0.4em 0.5em;
+    display: inline-block;
+    border-bottom: 1px solid #ccc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    margin: 1em 2.5em 1em 0em;
+}
+.myaccount-main .myaccount-one-line {
+    font-size: 1em;
+    color: #000;
+    width: 100%;
+    padding: 0.4em 0.5em;
+    display: inline-block;
+    border-bottom: 1px solid #ccc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    margin: 1em 2.5em 1em 0em;
+}
+.myaccount-main input.no-margin {
+    margin: 0px;
+}
+.myaccount-main input.no-margin {
+    margin: 0px;
+}
+.myaccount-main input[type="submit"] {
+    font-size: 1em;
+    color: #fff;
+    padding: 0.6em 1em;
+    background:#EA552B;
+    border: none;
+    outline: none;
+    float: right;
+    margin-top: 2em;
+    margin-bottom: 3em;
+}
+.myaccount-main input[type="submit"]:hover {
+	background:#847057;
+	transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -o-transition: 0.5s all;
+}
+/* update information end here */
+
+/* change password start here*/
+.my-password {
+    padding: 6em 0em;
+}
+.my-password .password-main {
+    margin: 0 20em;
+} 
+.password-main h1{
+    font-size: 2em;
+    color:#EA572D;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    margin-bottom: 2em;
+}
+.password-main h2 {
+    font-size: 1.5em;
+    color: #847057;
+    margin: 1em 0em;
+    font-family: 'Oswald', sans-serif;
+}
+
+.password-main .password-one-line {
+    font-size: 1em;
+    color: #000;
+    width: 100%;
+    padding: 0.4em 0.5em;
+    display: inline-block;
+    border-bottom: 1px solid #ccc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    margin: 1em 2.5em 1em 0em;
+}
+.password-main input.no-margin {
+    margin: 0px;
+}
+.password-main input.no-margin {
+    margin: 0px;
+}
+.password-main input[type="submit"] {
+    font-size: 1em;
+    color: #fff;
+    padding: 0.6em 1em;
+    background:#EA552B;
+    border: none;
+    outline: none;
+    float: right;
+    margin-top: 2em;
+    margin-bottom: 3em;
+}
+.password-main input[type="submit"]:hover {
+	background:#847057;
+	transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+}
+/* change password end here */
+
+/* history start here */
+.history{
+	padding:6em 0em;
+}
+.history-list {
+	width:100%;
+	margin: 2em 0 2em;
+}
+.history-list .new-date {
+    margin-top: 3em;
+    margin-bottom: 0.5em;
+}
+ul.unit{
+	background:#EA572D;
+	padding:1em;
+}
+ul.unit li {
+	display:inline-block;
+	width: 33%;
+    float: left;
+}
+ ul.unit li span{
+	display:inline-block;
+	color:#fff;
+	font-size:1.2em;
+	text-align:center;
+}
+ul.cart-header,ul.cart-header1{
+	padding:1em;
+	background:#FFFFFF;
+	margin: 0em 0em 1.5em 0em;
+	box-shadow:0px 0px 4px #D2D1D1;
+}
+ul.cart-header2{
+	padding:1em;
+	background:#fff;
+	box-shadow: 0px 0px 4px #C2C2C2;
+}
+ ul.cart-header li, ul.cart-header1 li,ul.cart-header2 li{
+	display:inline-block;
+	width: 33%;
+	float:left;
+}
+ul.cart-header li span,ul.cart-header1 li span,ul.cart-header2 li span{
+	display: block;
+	color:#000;
+	font-size:1.2em;
+	text-align:left;
+	margin-top:1.5em;
+}
+ul.cart-header li span.no-mar-more,ul.cart-header1 li span.no-mar-more,ul.cart-header2 li span.no-mar-more{
+    margin-top: 1em;
+}
+.in-check {
+	margin-top: 2%;
+}
+.cart-header,.cart-header1,.cart-header2{
+	position:relative;
+}
+.cart-items {
+	padding: 0 1em;
+}
+.cart-items.heading h1 {
+    font-size: 1.5em;
+    color:#847057;
+    font-family: 'Oswald', sans-serif;
+}
+ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
+    font-size: 0.7em;
+    color: #969393;
+}
+
+/* history end here */
+
+/* arriving start here */
+.arriving{
+	padding:6em 0em;
+}
+.arriving-list {
+	width:100%;
+	margin: 2em 0 2em;
+}
+.arriving-list .arriving-status {
+    margin-top: 3em;
+    margin-bottom: 0.5em;
+}
+ul.unit{
+	background:#EA572D;
+	padding:1em;
+}
+ul.unit li {
+	display:inline-block;
+	width: 33%;
+    float: left;
+}
+ ul.unit li span{
+	display:inline-block;
+	color:#fff;
+	font-size:1.2em;
+	text-align:center;
+}
+ul.cart-header,ul.cart-header1{
+	padding:1em;
+	background:#FFFFFF;
+	margin: 0em 0em 1.5em 0em;
+	box-shadow:0px 0px 4px #D2D1D1;
+}
+ul.cart-header2{
+	padding:1em;
+	background:#fff;
+	box-shadow: 0px 0px 4px #C2C2C2;
+}
+ ul.cart-header li, ul.cart-header1 li,ul.cart-header2 li{
+	display:inline-block;
+	width: 33%;
+	float:left;
+}
+ul.cart-header li span,ul.cart-header1 li span,ul.cart-header2 li span{
+	display: block;
+	color:#000;
+	font-size:1.2em;
+	text-align:left;
+	margin-top:1.5em;
+}
+ul.cart-header li span.no-mar-more,ul.cart-header1 li span.no-mar-more,ul.cart-header2 li span.no-mar-more{
+    margin-top: 1em;
+}
+.in-check {
+	margin-top: 2%;
+}
+.cart-header,.cart-header1,.cart-header2{
+	position:relative;
+}
+.cart-items {
+	padding: 0 1em;
+}
+.cart-items.heading h1 {
+    font-size: 1.5em;
+    color:#847057;
+    font-family: 'Oswald', sans-serif;
+}
+ul.cart-header li span h6,ul.cart-header1 li span h6,ul.cart-header2 li span h6{
+    font-size: 0.7em;
+    color: #969393;
+}
+/* arriving end here */
 
 /*--meadia quiries start here--*/
 @media(max-width:1600px){
