--- a/views/customer.hbs
+++ b/views/customer.hbs
@@ -6,6 +6,8 @@
                     <th scope="col">No.</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
+                    <th scope="col">Number</th>
+                    <th scope="col">Address</th>
                     <th scope="col">Email</th>
                     <th scope="col">Status</th>
                 </tr>
@@ -15,6 +17,8 @@
                     <th scope="row">1</th>
                     <td>Mark</td>
                     <td>Otto</td>
+                    <td>12345689</td>
+                    <td>New yord</td>
                     <td>@mdo</td>
                     <td><a href="#" class="ban-option">Ban/Unban</a></td>
                 </tr>
@@ -22,6 +26,8 @@
                     <th scope="row">2</th>
                     <td>Jacoa</td>
                     <td>Thornton</td>
+                    <td>987654321</td>
+                    <td>Tokyo</td>
                     <td>@fat</td>
                     <td><a href="#" class="ban-option">Ban/Unban</a></td>
                 </tr>
@@ -29,6 +35,8 @@
                     <th scope="row">3</th>
                     <td>Larry</td>
                     <td>the Bird</td>
+                    <td>456123789</td>
+                    <td>wuhan</td>
                     <td>@twitter</td>
                     <td><a href="#" class="ban-option">Ban/Unban</a></td>
                 </tr>
