--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="banner-main">
             <div class="col-md-6 banner-left">
-                <a href="/single"><img src="/images/ba.png" alt="" class="img-responsive"></a>
+                <a href="/product"><img src="/images/ba.png" alt="" class="img-responsive"></a>
             </div>
             <div class="col-md-6 banner-right simpleCart_shelfItem">
                 <span class="bann-heart"> </span>
@@ -11,8 +11,8 @@
                 <h1>Sed perspiciatis unde</h1>
                 <h5 class="item_price">$200.00</h5>
                 <ul class="bann-small-img">
-                    <li><a href="/single"><img src="/images/b1.jpg"></a></li>
-                    <li><a href="/single"><img src="/images/b2.jpg"></a></li>
+                    <li><a href="/product"><img src="/images/b1.jpg"></a></li>
+                    <li><a href="/product"><img src="/images/b2.jpg"></a></li>
                 </ul>
                 <h6>Size Charts</h6>
                 <ul class="bann-btns">
@@ -67,14 +67,14 @@
                 </ul>
             </div>
             <div class="col-md-4 blc-layer3-grids2">
-                <a href="/single"><img src="/images/bracelate.png" alt=""></a>
+                <a href="/product"><img src="/images/bracelate.png" alt=""></a>
             </div>
             <div class="col-md-4 blc-layer3-grids-3 simpleCart_shelfItem">
                 <div class="box-grid">
-                    <h3><a href="/single">Brand</a></h3>
+                    <h3><a href="/product">Brand</a></h3>
                     <p>Nam libero tempore cum</p>
                     <h5>At vero eos et accusamus iusto</h5>
-                    <a href="/single"><img src="/images/w2.png" alt=""></a>
+                    <a href="/product"><img src="/images/w2.png" alt=""></a>
                     <div class="box-grid-price">
                         <div class="box-grid-price-left">
                             <h4>Stock</h4>
@@ -107,10 +107,10 @@
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="/single"><img src="/images/h1.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="/product"><img src="/images/h1.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="/single">Smart Shopping</a></h3>
+                        <h3><a href="/product">Smart Shopping</a></h3>
                         <p>Explore Now</p>
                     </div>
                     <div class="srch">
@@ -121,10 +121,10 @@
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="/single"><img src="/images/h2.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="/product"><img src="/images/h2.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="/single">Smart Shopping</a></h3>
+                        <h3><a href="/product">Smart Shopping</a></h3>
                         <p>Explore Now</p>
                     </div>
                     <div class="srch">
@@ -135,10 +135,10 @@
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="/single"><img src="/images/h3.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="/product"><img src="/images/h3.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="/single">Smart Shopping</a></h3>
+                        <h3><a href="/product">Smart Shopping</a></h3>
                         <p>Explore Now</p>
                     </div>
                     <div class="srch">
@@ -149,10 +149,10 @@
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="/single"><img src="/images/h4.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="/product"><img src="/images/h4.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="/single">Smart Shopping</a></h3>
+                        <h3><a href="/product">Smart Shopping</a></h3>
                         <p>Explore Now</p>
                     </div>
                     <div class="srch">
