--- a/views/product/kid.hbs
+++ b/views/product/kid.hbs
@@ -65,31 +65,6 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="sky-form">
-                            <h4>Colour</h4>
-                            <ul class="w_nav2">
-                                <li><a class="color1" href="#"></a></li>
-                                <li><a class="color2" href="#"></a></li>
-                                <li><a class="color3" href="#"></a></li>
-                                <li><a class="color4" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                                <li><a class="color12" href="#"></a></li>
-                                <li><a class="color13" href="#"></a></li>
-                                <li><a class="color14" href="#"></a></li>
-                                <li><a class="color15" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                            </ul>
-                        </section>
                     </div>
                 </div>
             </div>
@@ -97,10 +72,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h28.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h28.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -111,10 +86,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h29.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h29.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -125,10 +100,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h30.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h30.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -139,10 +114,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h31.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h31.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -153,10 +128,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h32.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h32.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -167,10 +142,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h33.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h33.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -181,10 +156,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h34.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h34.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -195,10 +170,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h35.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h35.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -209,10 +184,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h36.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h36.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
