--- a/views/product/men.hbs
+++ b/views/product/men.hbs
@@ -70,31 +70,6 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="sky-form">
-                            <h4>Colour</h4>
-                            <ul class="w_nav2">
-                                <li><a class="color1" href="#"></a></li>
-                                <li><a class="color2" href="#"></a></li>
-                                <li><a class="color3" href="#"></a></li>
-                                <li><a class="color4" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                                <li><a class="color12" href="#"></a></li>
-                                <li><a class="color13" href="#"></a></li>
-                                <li><a class="color14" href="#"></a></li>
-                                <li><a class="color15" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                            </ul>
-                        </section>
                     </div>
                 </div>
             </div>
@@ -102,10 +77,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h19.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h19.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -116,10 +91,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h20.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h20.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -130,10 +105,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h21.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h21.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -144,10 +119,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h22.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h22.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -158,10 +133,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h23.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h23.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -172,10 +147,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h24.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h24.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -186,10 +161,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h25.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h25.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -200,10 +175,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h26.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h26.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -214,10 +189,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h27.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h27.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
