--- a/views/product/women.hbs
+++ b/views/product/women.hbs
@@ -65,31 +65,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="sky-form">
-                            <h4>Colour</h4>
-                            <ul class="w_nav2">
-                                <li><a class="color1" href="#"></a></li>
-                                <li><a class="color2" href="#"></a></li>
-                                <li><a class="color3" href="#"></a></li>
-                                <li><a class="color4" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                                <li><a class="color12" href="#"></a></li>
-                                <li><a class="color13" href="#"></a></li>
-                                <li><a class="color14" href="#"></a></li>
-                                <li><a class="color15" href="#"></a></li>
-                                <li><a class="color5" href="#"></a></li>
-                                <li><a class="color6" href="#"></a></li>
-                                <li><a class="color7" href="#"></a></li>
-                                <li><a class="color8" href="#"></a></li>
-                                <li><a class="color9" href="#"></a></li>
-                                <li><a class="color10" href="#"></a></li>
-                            </ul>
-                        </section>
+
                     </div>
                 </div>
             </div>
@@ -97,10 +73,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h5.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h5.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -111,10 +87,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h6.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h6.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -125,10 +101,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h7.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h7.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -139,10 +115,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h8.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h8.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -153,10 +129,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h9.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h9.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -167,10 +143,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h10.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h10.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -181,10 +157,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h11.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h11.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -195,10 +171,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h12.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h12.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
@@ -209,10 +185,10 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/single"><img src="images/h13.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href="/product"><img src="/images/h13.jpg" alt="" class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/single">Smart Shopping</a></h3>
+                            <h3><a href="/product">Smart Shopping</a></h3>
                             <p>Explore Now</p>
                         </div>
                         <div class="srch">
