--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,18 +1,17 @@
 <!--sign in start here-->
-<div class="signin">
+<div class="sign-up">
     <div class="container">
-        <div class="signin-main">
+        <div class="signup-main">
             <h1>Sign up</h1>
             <h2>Informations</h2>
             <form>
-                <input type="text" placeholder="Username">
-                <input type="text" class="no-margin" placeholder="E-mail">
-                <input type="password" placeholder="Password" required="" />
-                <input type="password" class="no-margin" placeholder="Confirm Password" required="" />
-                <span class="checkbox1">
-                    <label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>i agree terms of use and
-                        privacy</label>
-                </span>
+                <input type="email" placeholder="E-mail" class="signup-one-line">
+                <input type="password" placeholder="Password" required="" class="signup-two-row" />
+                <input type="password" placeholder="Confirm Password" required="" class="no-margin signup-two-row" />
+                <input type="text" placeholder="First name" class="signup-two-row">
+                <input type="text" placeholder="Last name" class="signup-two-row no-margin">
+                <input type="text" placeholder="Phone numbers" class="signup-two-row">
+                <input type="text" placeholder="Full address" class="signup-two-row no-margin">
                 <input type="submit" value="Submit">
             </form>
         </div>
