--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -60,10 +60,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="nav navbar-nav">
                   <li><a href="/product/men">Men</a></li>
                   <li><a href="/product/women">Women</a></li>
-                  <li><a href="/product/kid">Kid</a></li>
+                  <li><a href="/product/sale">Sale</a></li>
                   <li><a href="/contact">Contact</a></li>
-                  <li><a href="/customer" class="customer-for-admin">Customer</a></li>
-                  <li><a href="/customer/order" class="order-for-admin">Order</a></li>
+                  <li><a href="/admin/customer" class="customer-for-admin">Customer</a></li>
+                  <li><a href="/admin/order" class="order-for-admin">Order</a></li>
                 </ul>
               </div>
               <!--/.navbar-collapse-->
