--- a/views/product/men.hbs
+++ b/views/product/men.hbs
@@ -14,11 +14,10 @@
                                 </div>
                                 <div class="col col-4">
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>handbags</label>
+                                            name="checkbox"><i></i>Handbag</label>
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Bracelets</label>
-                                    <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Watches</label>
+                                            name="checkbox"><i></i>Bracelet</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Watche</label>
                                 </div>
                             </div>
                         </section>
@@ -30,22 +29,21 @@
                                         Brands</label>
                                 </div>
                                 <div class="col col-4">
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>kurtas</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sonata</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Titan</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Puma</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Nike</label>
-                                    <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Fastrack</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Louis
+                                        Vutton</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Rolex</label>
                                     <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Chanel</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fendi</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Hilde
-                                        Palladino</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Lana
-                                        Marks</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Gucci</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Omega</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Hermes</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Dior</label>
                                     <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Prada</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>YSL</label>
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>flipkart</label>
+                                            name="checkbox"><i></i>Citizen</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Michael
+                                        Kors</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fendi</label>
                                 </div>
                             </div>
                         </section>
@@ -53,8 +51,6 @@
                             <h4>discount</h4>
                             <div class="row1 row2 scroll-pane">
                                 <div class="col col-4">
-                                    <label class="radio"><input type="radio" name="radio" checked=""><i></i>60 % and
-                                        above</label>
                                     <label class="radio"><input type="radio" name="radio"><i></i>50 % and
                                         above</label>
                                     <label class="radio"><input type="radio" name="radio"><i></i>40 % and
@@ -71,6 +67,7 @@
                             </div>
                         </section>
                     </div>
+                    <button class="filter-button">Sort</button>
                 </div>
             </div>
             <div class="col-md-9 product-block">
