--- a/views/product/women.hbs
+++ b/views/product/women.hbs
@@ -14,11 +14,10 @@
                                 </div>
                                 <div class="col col-4">
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>handbags</label>
+                                            name="checkbox"><i></i>Handbag</label>
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Bracelets</label>
-                                    <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Watches</label>
+                                            name="checkbox"><i></i>Bracelet</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Watche</label>
                                 </div>
                             </div>
                         </section>
@@ -30,22 +29,21 @@
                                         Brands</label>
                                 </div>
                                 <div class="col col-4">
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>kurtas</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Sonata</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Titan</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Puma</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Nike</label>
-                                    <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>Fastrack</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Louis
+                                        Vutton</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Rolex</label>
                                     <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Chanel</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fendi</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Hilde
-                                        Palladino</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Lana
-                                        Marks</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Gucci</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Omega</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Hermes</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Dior</label>
                                     <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Prada</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>YSL</label>
                                     <label class="checkbox"><input type="checkbox"
-                                            name="checkbox"><i></i>flipkart</label>
+                                            name="checkbox"><i></i>Citizen</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Michael
+                                        Kors</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Fendi</label>
                                 </div>
                             </div>
                         </section>
@@ -53,152 +51,156 @@
                             <h4>discount</h4>
                             <div class="row1 row2 scroll-pane">
                                 <div class="col col-4">
-                                    <label class="radio"><input type="radio" name="radio" checked=""><i></i>60 % and
+                                    <label class="radio"><input type="radio" name="radio"><i></i>50 % and
                                         above</label>
-                                    <label class="radio"><input type="radio" name="radio"><i></i>50 % and above</label>
-                                    <label class="radio"><input type="radio" name="radio"><i></i>40 % and above</label>
+                                    <label class="radio"><input type="radio" name="radio"><i></i>40 % and
+                                        above</label>
                                 </div>
                                 <div class="col col-4">
-                                    <label class="radio"><input type="radio" name="radio"><i></i>30 % and above</label>
-                                    <label class="radio"><input type="radio" name="radio"><i></i>20 % and above</label>
-                                    <label class="radio"><input type="radio" name="radio"><i></i>10 % and above</label>
+                                    <label class="radio"><input type="radio" name="radio"><i></i>30 % and
+                                        above</label>
+                                    <label class="radio"><input type="radio" name="radio"><i></i>20 % and
+                                        above</label>
+                                    <label class="radio"><input type="radio" name="radio"><i></i>10 % and
+                                        above</label>
                                 </div>
                             </div>
                         </section>
-
                     </div>
+                    <button class="filter-button">Sort</button>
                 </div>
-            </div>
-            <div class="col-md-9 product-block">
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h5.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h6.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h7.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h8.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h9.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h10.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h11.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h12.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h13.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"> </div>
             </div>
         </div>
+        <div class="col-md-9 product-block">
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h5.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h6.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h7.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h8.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h9.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h10.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h11.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h12.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 home-grid">
+                <div class="home-product-main">
+                    <div class="home-product-top">
+                        <a href="/product"><img src="/images/h13.jpg" alt="" class="img-responsive zoom-img"></a>
+                    </div>
+                    <div class="home-product-bottom">
+                        <h3><a href="/product">Smart Shopping</a></h3>
+                        <p>Explore Now</p>
+                    </div>
+                    <div class="srch">
+                        <span>$200</span>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"> </div>
+        </div>
     </div>
+</div>
 </div>
 <!--product end here-->
