--- a/views/product/men.hbs
+++ b/views/product/men.hbs
@@ -71,132 +71,25 @@
                 </div>
             </div>
             <div class="col-md-9 product-block">
+                {{#each products}}
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="/product"><img src="/images/h19.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href={{this.slug}}><img src={{this.image.[0]}} alt={{this.name}}
+                                    class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
+                            <h3 style="height: 2.5em; text-transform: uppercase;"><a
+                                    href={{this.slug}}>{{this.name}}</a>
+                            </h3>
+                            <p style="color: black; font-size: 1.3em">Price: {{this.price}}$</p>
                         </div>
                         <div class="srch">
-                            <span>$200</span>
+                            <span>{{this.sale}}</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h20.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h21.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h22.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h23.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h24.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h25.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h26.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="/product"><img src="/images/h27.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="/product">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
                 <div class="clearfix"> </div>
             </div>
         </div>
