--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -6,99 +6,57 @@
                 <div class="col-md-5 single-top">
                     <div class="flexslider">
                         <ul class="slides">
-                            <li data-thumb="/images/si1.jpg">
-                                <div class="thumb-image"> <img src="/images/s1.jpg" data-imagezoom="true"
+                            {{#each detail.image}}
+                            <li data-thumb={{this}} style="margin-bottom: 2em;">
+                                <div class="thumb-image"> <img src={{this}} data-imagezoom="true"
                                         class="img-responsive"> </div>
                             </li>
-                            <li data-thumb="/images/si2.jpg">
-                                <div class="thumb-image"> <img src="/images/s2.jpg" data-imagezoom="true"
-                                        class="img-responsive"> </div>
-                            </li>
-                            <li data-thumb="/images/si3.jpg">
-                                <div class="thumb-image"> <img src="/images/s3.jpg" data-imagezoom="true"
-                                        class="img-responsive"> </div>
-                            </li>
+
+                            {{/each}}
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-7 single-top-left simpleCart_shelfItem">
-                    <h2>Undercover</h2>
-                    <h1>Lorem ipsum dolor</h1>
-                    <h3>Excepteur sint occaecat cupidatat</h3>
-                    <h6 class="item_price">$600.00</h6>
-                    <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled Sed
-                        ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
-                    <h4>Size Charts</h4>
+                    <h1 style="text-transform: uppercase; font-size: 4em;">{{detail.name}}</h1>
+                    <h2>Catergories: {{detail.category}}</h2>
+                    <h2>Brand: {{detail.brand}}</h2>
+                    <h2>Gender: {{detail.gender}}</h2>
+                    <h1 style="margin-top: 2em;">Description:</h1>
+                    {{#each detail.description}}
+                    <p>- {{this}}</p>
+                    {{/each}}
+
+                    <h2 class="item_price" style="margin-top: 2em;">Price: {{detail.price}}$</h2>
+                    {{#if detail.sale}}
+                    <h3>Sale: {{detail.sale}}$</h3>
+                    {{/if}}
                     <ul class="bann-btns">
-                        <li><select class="bann-size">
-                                <option value="select your location">Size</option>
-                                <option value="saab">Small</option>
-                                <option value="fiat">Medium</option>
-                                <option value="audi">Large</option>
-                            </select>
-                        </li>
                         <li><a href="#" class="item_add">Add To Cart</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
             </div>
             <div class="singlepage-product">
+                <div class="related-product">You may also like:</div>
+                {{#each relate}}
                 <div class="col-md-3 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href="#"><img src="/images/h14.jpg" alt="" class="img-responsive zoom-img"></a>
+                            <a href={{this.slug}}><img src={{this.image.[0]}} alt=""
+                                    class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
-                            <h3><a href="#">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
+                            <h3 style="height: 2.5em; text-transform: uppercase;"><a
+                                    href={{this.slug}}>{{this.name}}</a>
+                            </h3>
+                            <p style="color: black; font-size: 1.3em">Price: {{this.price}}$</p>
                         </div>
                         <div class="srch">
-                            <span>$200</span>
+                            <span>{{this.sale}}</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="#"><img src="/images/h15.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="#">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="#"><img src="/images/h16.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="#">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 home-grid">
-                    <div class="home-product-main">
-                        <div class="home-product-top">
-                            <a href="#"><img src="/images/h17.jpg" alt="" class="img-responsive zoom-img"></a>
-                        </div>
-                        <div class="home-product-bottom">
-                            <h3><a href="#">Smart Shopping</a></h3>
-                            <p>Explore Now</p>
-                        </div>
-                        <div class="srch">
-                            <span>$200</span>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
                 <div class="clearfix"> </div>
 
                 <div class="comment-block">
