--- a/views/product/men.hbs
+++ b/views/product/men.hbs
@@ -93,6 +93,19 @@
                 <div class="clearfix"> </div>
             </div>
         </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+            <div class="pagination col-md-12">
+                <ul class="page-list">
+                    <li class="page"><a href="">&lt;&lt;</a></li>
+                    <li class="page current-page"><a href="?page=1">1</a></li>
+                    <li class="page"><a href="?page=2">2</a></li>
+                    <li class="page"><a href="?page=3">3</a></li>
+                    <li class="page"><a href="">&gt;&gt;</a></li>
+                </ul>
+            </div>
+
+        </div>
     </div>
 </div>
 <!--product end here-->
