--- a/views/product/women.hbs
+++ b/views/product/women.hbs
@@ -70,137 +70,29 @@
                     <button class="filter-button">Sort</button>
                 </div>
             </div>
-        </div>
-        <div class="col-md-9 product-block">
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h5.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h6.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
+            <div class="col-md-9 product-block">
+                {{#each products}}
+                <div class="col-md-4 home-grid">
+                    <div class="home-product-main">
+                        <div class="home-product-top">
+                            <a href={{this.slug}}><img src={{this.image.[0]}} alt={{this.name}}
+                                    class="img-responsive zoom-img"></a>
+                        </div>
+                        <div class="home-product-bottom">
+                            <h3 style="height: 2.5em; text-transform: uppercase;"><a
+                                    href={{this.slug}}>{{this.name}}</a>
+                            </h3>
+                            <p style="color: black; font-size: 1.3em">Price: {{this.price}}$</p>
+                        </div>
+                        <div class="srch">
+                            <span>{{this.sale}}</span>
+                        </div>
                     </div>
                 </div>
+                {{/each}}
+                <div class="clearfix"> </div>
             </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h7.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h8.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h9.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h10.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h11.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h12.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h13.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="clearfix"> </div>
         </div>
     </div>
-</div>
 </div>
 <!--product end here-->
